2003-10-31  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove argument of FIX_MAKEFILE_COMPILE,
	FIX_MAKEFILE_DISTRIB, FIX_MAKEFILE_INFO.

2003-10-07  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Drop PARAMS definition from config.h.in.

2003-10-08  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gt_SIG_ATOMIC_T.
	* Makefile.am (config.h_vms, config.h.msvc): Define HAVE_SIG_ATOMIC_T.

2003-10-04  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove gt_PROG_LEX invocation.

2003-09-18  Bruno Haible  <bruno@clisp.org>

	* windows/gettextpo.def: Add po_file_domain_header, po_header_field,
	po_message_is_obsolete, po_message_is_fuzzy, po_message_is_format.
	* windows/gettextpo.rc: Bump version number to 0.12.2.

2003-09-16  Bruno Haible  <bruno@clisp.org>

	Portability to SunOS 4.
	* configure.ac: Also check for atexit.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Export fwriteerror.

2003-09-13  Bruno Haible  <bruno@clisp.org>

	* windows/gettextlib.def: Export close_stdout.

2003-09-09  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Don't test for putc_unlocked.

2003-08-31  Bruno Haible  <bruno@clisp.org>

	* windows/gettextsrc.def: Add formatstring_sh.

2003-08-29  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Define HAVE_DECL__SNPRINTF,
	HAVE_DECL__SNWPRINTF.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Define DLL_VARIABLE in config.h through AH_BOTTOM.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* windows/gettextsrc.def: Add formatstring_gcc_internal,
	formatstring_perl, formatstring_perl_brace to the export list.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* windows/gettextpo.def: New file.
	* windows/gettextpo.rc: New file.
	* Makefile.am (EXTRA_DIST): Add them.

2003-08-23  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Define HAVE_BTOWC, HAVE_DECL_GETENV,
	HAVE_MBSTATE_T, HAVE_READLINK, HAVE_WCSLEN, HAVE_WINT_T, HAVE_WPRINTF.